--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,13 @@ aiofiles
 dnspython
 motor[srv]
 beautifulsoup4
-pyrofork
+pyrogram 
 datetime 
 pytz 
 requests 
 bs4 
-Flask==1.1.2
-gunicorn==20.1.0
-Jinja2==3.0.3
-werkzeug==2.0.2
-itsdangerous==2.0.1
+Flask
+gunicorn
+Jinja2
+werkzeug
+itsdangerous
